tests/ui/borrowck/borrowck-use-in-index-lvalue.stderr
error[E0381]: used binding `w` isn't initialized
  --> $DIR/borrowck-use-in-index-lvalue.rs:5:5
   |
LL |     let w: &mut [isize];
   |         - binding declared here but left uninitialized
LL |     w[5] = 0;
   |     ^^^^ `*w` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let w: &mut [isize] = &mut [];
   |                         +++++++++

error[E0381]: used binding `w` isn't initialized
  --> $DIR/borrowck-use-in-index-lvalue.rs:8:5
   |
LL |     let mut w: &mut [isize];
   |         ----- binding declared here but left uninitialized
LL |     w[5] = 0;
   |     ^^^^ `*w` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let mut w: &mut [isize] = &mut [];
   |                             +++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
